Adicionando suporte a deploy github pages

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "8-putting-it-all-together-chat",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gustafsilva.github.io/fundamentos-do-react-tudo-junto-2/",
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -13,6 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pre-deploy": "yarn run build",
+    "deploy": "gh-pages -d build",
+    "clear": "rm -r build"
   }
 }
